--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ serde_yaml = "0.9"
 # Utility
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+regex = "1"
+html-escape = "0.2"
+html2md = "0.2"
