--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,9 @@ rust-version = "1.60"
 
 [dependencies]
 tokio = { version = "1.22", features = ["full", "time"] }
-openssl = { version = "0.10", features = ["vendored"] }
 
 # reqwest
-reqwest = { version = "0.11", features = ["json"]}
+reqwest = { version = "0.11", features = ["json", "rustls-tls"]}
 
 # Templates
 tera = "1.17"
