--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_yaml = "0.9"
 
 # log
 log = "0.4"
-env_logger = "0.10"
+simplelog = "0.11"
 
 # Utility
 serde = { version = "1", features = ["derive"] }
