--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 regex = "1"
 html-escape = "0.2"
-html2md = "0.2"
 chrono = "0.4"
+
+# Markdown
+html2md = "0.2"
+comrak = "0.15"
