chage log level

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-log_level: debug
+log_level: error
 creator: Papa Friki
 data: /data/rust/aopodcast/data/data.json
 public: /data/rust/aopodcast/public
