--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,13 @@
-image: docker:dind
 variables:
   GIT_DEPTH: 1                               # Create a shallow copy
   BRANCH_NAME: "main"                       # Name of the branch to modify
   BOT_NAME: "GitLab Runner Bot"              # Bot's name that appears in the commit log
   BOT_EMAIL: "gitlab-runner-bot@example.net" # Bot's email, not really important
   COMMIT_MESSAGE: "Commit from runner "      # Part of the commit message
+  DOCKER_HOST: "tcp://docker:2375"
+
+services:
+  - docker:dind
 
 .modify: &modify |
   docker run -v "${PWD}/config.yml:/app/config.yml" \
