--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:dind
+image: atareao/aopodcast:latest
 
 variables:
   GIT_DEPTH: 1                               # Create a shallow copy
@@ -7,6 +7,7 @@ variables:
   BOT_EMAIL: "gitlab-runner-bot@example.net" # Bot's email, not really important
   COMMIT_MESSAGE: "Commit from runner "      # Part of the commit message
   DOCKER_HOST: "tcp://docker:2375"
+
 
 .modify: &modify |
   docker run -v "${PWD}/config.yml:/app/config.yml" \
