--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 log_level: error
 creator: Papa Friki
-data: /data/rust/aopodcast/data/data.json
-public: /data/rust/aopodcast/public
+data: data/data.json
+public: public
 site:
   author: Papá Friki
   name: Papá Friki
