--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,9 @@
 log_level: info
-creator: Papa Friki
 data: data/data.json
 public: public
 style_css: assets/style.css
 site:
   author: Papá Friki
-  name: Papá Friki
   title: Batallitas del día a día de un Papá Friki
   description: Batallitas del día a día de un Papá Friki
   baseurl:
@@ -18,6 +16,9 @@ site:
   gitlab: papafrikipodcast
   rss: http://feeds.feedburner.com/papafriki
   twitter: papa_friki
-  archiveorg: papafriki
   google_analytics:
   disqus: papafriki
+  archiveorg:
+    creator: Papá Friki
+    link: papafriki
+    subject:
