--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rust-version = "1.60"
 
 [dependencies]
 tokio = { version = "1.22", features = ["full", "time"] }
+async-recursion = "1.0"
 
 # reqwest
 reqwest = { version = "0.11", features = ["json"] }
