add youtube and linktree

--- a/config.yml
+++ b/config.yml
@@ -22,3 +22,5 @@ site:
   twitter: papa_friki
   google_analytics:
   disqus: papafriki
+  youtube: https://www.youtube.com/channel/UCAl-ql8V1IUZKYYLhhUVCYw
+  linktree: https://linktr.ee/papa_friki
