--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,7 @@ archiveorg:
   link: papafriki
   subject:
 site:
+  podcast_feed: feed
   author: Papá Friki
   title: Batallitas del día a día de un Papá Friki
   description: Batallitas del día a día de un Papá Friki
