--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ log_level: info
 data: data/data.json
 public: public
 style_css: assets/style.css
+timezone: Europe/Madrid
 archiveorg:
   creator: Papá Friki
   link: papafriki
