--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ serde_yaml = "0.9"
 gray_matter = "0.2"
 
 # log
-log = "0.4"
-simplelog = "0.11"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.17", features = ["local-time", "env-filter"] }
 
 # Utility
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 regex = "1"
 html-escape = "0.2"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.8"
 
 # Markdown
