--- a/config.yml
+++ b/config.yml
@@ -13,7 +13,7 @@ site:
   title: Batallitas del día a día de un Papá Friki
   description: Batallitas del día a día de un Papá Friki
   baseurl: 
-  url: https://atareao.gitlab.io
+  url: https://atareao.gitlab.io/podcast
   avatar: https://gitlab.com/uploads/-/system/user/avatar/2074936/avatar.png
   category: Technology
   subcategory: Podcasting
